<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.register.RegistroContactoFragment">

    <TextView
        android:id="@+id/tvMensajeRegistroContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_restaurante_contacto_mensaje"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registro_restaurante_contacto_calle"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMensajeRegistroContacto" />

    <EditText
        android:id="@+id/etNumeroExterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:hint="@string/registro_restaurante_contacto_numero"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCalle" />

    <EditText
        android:id="@+id/etNumeroInterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:hint="@string/registro_restaurante_contacto_numero_interno"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@id/etNumeroExterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCalle" />

    <EditText
        android:id="@+id/etCodigoPostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registro_restaurante_contacto_codigo_postal"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeroExterior" />

    <EditText
        android:id="@+id/etColonia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registro_restaurante_contacto_colonia"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoPostal"/>

    <EditText
        android:id="@+id/etMunicipio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registro_restaurante_contacto_municipio"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etColonia"/>

    <EditText
        android:id="@+id/etEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registro_restaurante_contacto_estado"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMunicipio"/>

    <Button
        android:id="@+id/btnRegistroDatosContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="15dp"
        android:text="@string/register_action_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEstado"/>

</androidx.constraintlayout.widget.ConstraintLayout>