<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register.InicioSesionFragment">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/splash"/>

    <TextView
        android:id="@+id/tvLoginMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_message"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="14"
        android:hint="@string/login_user"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginMensaje"/>


    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="14"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin"/>

    <TextView
        android:id="@+id/tvMensajeRecuperacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:gravity="right"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

    <Button
        android:id="@+id/btnInicioSesion"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/login_enter"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMensajeRecuperacion" />

    <TextView
        android:id="@+id/tvMensajeRegistroLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login_text_registration"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRegistro"
        app:layout_constraintTop_toBottomOf="@+id/btnInicioSesion" />

    <TextView
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/login_registrate"
        android:textColor="#1976D2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvMensajeRegistroLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnInicioSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>