<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.app.restaurant.AgregarPlatilloFragment">

    <TextView
        android:id="@+id/tvMensajeAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alimento_agregar_mensaje"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etNombreAlimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMensajeAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/alimento_agregar_nombre"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etCaducidadAlimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreAlimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/alimento_agregar_caducidad"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etCantidadAlimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCaducidadAlimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/alimento_agregar_cantidad"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnAgregarAlimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantidadAlimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:padding="15dp"
        android:text="@string/alimento_agregar"
        android:textColor="@color/white"
        android:textSize="18sp" />

</androidx.constraintlayout.widget.ConstraintLayout>