<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantRegisterActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView6"
        android:name="com.fime.lovetogo.ui.register.HeaderRegisterFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView6">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_instructions"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/txtResName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/register_restaurant_name"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/txtResEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/txtResPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/register_password"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/txtResConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/register_confirm_password"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnResCreateAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:padding="15dp"
            android:text="@string/register_action_button"
            android:textColor="@color/white"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>