<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectTypeRegisterActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView4"
        android:name="com.fime.lovetogo.ui.register.HeaderRegisterFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView4">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="@string/register_type_selection_instructions" />

        <Button
            android:id="@+id/btnRestaurantRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="30dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/register_restaurant_type_button"/>

        <Button
            android:id="@+id/btnUserRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="30dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/register_association_type_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>